Stanford Person x.x-x.x xxxx-xx-xx
--------------------------------------

Stanford Person 7.x-4.0 2014-11-27
---------------------------------------------
- BASIC-752: removed duplicate div on edit link
- BASIC-1034: Updated manage person view with sort by updated date
- Update stanford_person.info to add project status url
- Update and rename README.txt to README.md
- Added new revision on edit
- Added help text to field of interest and field of study
- Added css file
- Added dependency on Token

Stanford Person 7.x-4.0-alpha2 2014-05-16
---------------------------------------------
- Delete obsolete work info module
- Added file to person CT and display

Stanford Person 7.x-4.0-alpha1 2014-03-11
---------------------------------------------
- Jumpstart Installation Profile Compatible Version
- New features 2.x export
- New submodules
- Person reference feature

Stanford Person 7.x-3.0-alpha3 2013-08-21
---------------------------------------------
JSA Dev

Stanford Person 7.x-2.0-alpha12 2013-05-23
---------------------------------------------
Generated by Features 2.0, remove specialize and since

Stanford Person 7.x-2.0-alpha11 2013-05-23
---------------------------------------------
Feature from English

Stanford Person 7.x-1.0-jsadev 2013-08-15
---------------------------------------------
Exported as features 2.0

Stanford Person 7.x-1.0-alpha3 2013-05-15
---------------------------------------------

Stanford Person 7.x-1.0-alpha4 2013-05-20
---------------------------------------------

Stanford Person 7.x-1.0-alpha5 2013-05-20
---------------------------------------------

Stanford Person 7.x-1.0-alpha6 2013-05-20
---------------------------------------------

Stanford Person 7.x-1.0-alpha7 2013-05-20
---------------------------------------------

Stanford Person 7.x-1.0-alpha8 2013-05-21
---------------------------------------------

Stanford Person 7.x-1.0-alpha9 2013-05-23
---------------------------------------------

