@@ -1,5 +1,5 @@
 #[Stanford Person](https://github.com/SU-SWS/stanford_person)
-##### Version: 7.x-4.0
+##### Version: 7.x-4.1
 
 Maintainers: [jbickar](https://github.com/jbickar), [sherakama](https://github.com/sherakama)
 [Changelog.txt](CHANGELOG.txt)
