@@ -1,10 +1,14 @@
-.view-stanford-person .postcard-col1 { 
-	width: 155px; 
-} 
 .view-stanford-person .postcard-col2 { 
 	padding-right: 15px; 
-	width: 295px; 
-} 
-.view-stanford-person .postcard-col3 { 
-	width: 450px; 
+	min-width: 40%; 
+}
+@media (max-width: 480px) {
+	.view-stanford-person .postcard-left > div {
+		display: block;
+		width: 100%;
+		padding: 0 0 15px 0;
+	}
+	.view-stanford-person .postcard-left > div:first-child {
+		float: none;
+	}
 }
