@@ -2,7 +2,7 @@ name = stanford_person_reference
 description = A Feature for an entity reference that links to Person nodes, but is not associated with any one content type.
 core = 7.x
 package = Stanford
-version = 7.x-2.0-alpha1
+version = 7.x-4.x
 project = stanford_person_reference
 dependencies[] = entityreference
 dependencies[] = features
