@@ -2,7 +2,7 @@ name = Stanford Person Views
 description = Views for the Stanford Person
 core = 7.x
 package = Stanford
-version = 7.x-1.0-alpha5
+version = 7.x-4.x
 project = stanford_person_views
 dependencies[] = context
 dependencies[] = ctools
