@@ -2,7 +2,7 @@ name = Stanford Person
 description = Content type and views for the Stanford Person
 core = 7.x
 package = Stanford
-version = 7.x-4.0
+version = 7.x-4.1
 project = stanford_person
 dependencies[] = auto_nodetitle
 dependencies[] = context
@@ -11,6 +11,7 @@ dependencies[] = date
 dependencies[] = ds
 dependencies[] = ds_extras
 dependencies[] = email
+dependencies[] = entity_token
 dependencies[] = features
 dependencies[] = field_group
 dependencies[] = file
@@ -24,8 +25,6 @@ dependencies[] = strongarm
 dependencies[] = taxonomy
 dependencies[] = text
 dependencies[] = token
-dependencies[] = views
-dependencies[] = views_bulk_operations
 stylesheets[all][] = css/stanford_person.css
 features[context][] = stanford_person
 features[ctools][] = context:context:3
